--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MWAlletApplication"
+        android:name=".MwalletApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MWAlletApp">
+        android:theme="@style/Theme.MwalletApp">
 
         <activity
             android:name=".MainActivity"
@@ -29,6 +29,7 @@
             android:name=".MobileWalletAdapterActivity"
             android:launchMode="singleTask"
             android:taskAffinity="com.solana.mwallet.mwa_host_task"
+            android:theme="@style/Theme.MwalletApp.BottomSheetDialog"
             android:exported="true">
             <!-- Default solana-wallet URI from a browser or native dapp -->
             <intent-filter android:order="1">
