--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [ walletUriHost: "solanamobile.com", walletUriPath: "/mwallet/"]
+        buildConfigField "android.net.Uri",
+                "WALLET_URI_BASE", "android.net.Uri.parse(\"https://solanamobile.com/mwallet/\")"
     }
 
     testOptions {
@@ -83,7 +87,12 @@ android {
     buildFeatures {
         viewBinding true
         buildConfig true
+//        compose true
     }
+
+//    composeOptions {
+//        kotlinCompilerExtensionVersion = "1.5.7"
+//    }
 }
 
 dependencies {
@@ -102,7 +111,6 @@ dependencies {
     androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-clientlib:2.0.0'
     androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.0'
 
-    annotationProcessor 'androidx.room:room-compiler:2.6.1'
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -113,12 +121,34 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
     implementation 'com.google.android.material:material:1.11.0'
-    implementation 'com.solanamobile:digital-asset-links-android:1.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+
+    annotationProcessor 'androidx.room:room-compiler:2.6.1'
+    kapt 'androidx.room:room-compiler:2.6.1'
+
     implementation 'io.coil-kt:coil:2.5.0'
     implementation 'io.coil-kt:coil-svg:2.5.0'
     implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation 'io.github.funkatronics:multimult:0.2.0'
+    implementation 'com.solanamobile:digital-asset-links-android:1.0.2'
     implementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.0'
-    kapt 'androidx.room:room-compiler:2.6.1'
+//    implementation 'com.solanamobile:web3-core:0.2.2'
+//    implementation 'com.solanamobile:rpc-core:0.2.3'
+//    implementation 'com.solanamobile:web3-solana:0.2.0'
+
+//    def composeBom = platform('androidx.compose:compose-bom:2023.10.01')
+//    implementation composeBom
+//    androidTestImplementation composeBom
+//
+//    implementation 'androidx.compose.material3:material3'
+//    implementation 'androidx.compose.material:material-icons-core'
+//
+//    implementation 'androidx.compose.ui:ui-tooling-preview'
+//    debugImplementation 'androidx.compose.ui:ui-tooling'
+//
+//    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+//    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+//    implementation 'androidx.activity:activity-compose:1.8.2'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
+//    implementation 'androidx.compose.runtime:runtime-livedata'
 }
