--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
 }
@@ -99,7 +100,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestUtil 'androidx.test:orchestrator:1.4.2'
 
-    androidTestImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.21'
+    androidTestImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.22'
     androidTestImplementation 'androidx.test:core:1.5.0'
     androidTestImplementation 'androidx.test:core-ktx:1.5.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -108,20 +109,21 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-clientlib:2.0.0'
-    androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.0'
+    androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-clientlib:2.0.1'
+    androidTestImplementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.1'
 
     implementation 'androidx.activity:activity-ktx:1.8.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
 
     annotationProcessor 'androidx.room:room-compiler:2.6.1'
     kapt 'androidx.room:room-compiler:2.6.1'
@@ -130,6 +132,9 @@ dependencies {
     implementation 'io.coil-kt:coil-svg:2.5.0'
     implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
     implementation 'io.github.funkatronics:multimult:0.2.0'
-    implementation 'com.solanamobile:digital-asset-links-android:1.0.2'
-    implementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.0'
+    implementation 'com.solanamobile:digital-asset-links-android:1.0.3'
+    implementation 'com.solanamobile:mobile-wallet-adapter-walletlib:2.0.1'
+    implementation 'com.solanamobile:rpc-core:0.2.4'
+    implementation 'com.solanamobile:rpc-okiodriver:0.2.4'
+    implementation 'com.solanamobile:web3-solana:0.2.2'
 }
