--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
 
 plugins {
     id 'com.android.application' version '8.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22' apply false
 }
 
 task clean(type: Delete) {
