add version catalog, update all deps

--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ buildscript {
         google()
     }
     dependencies {
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.6"
+        classpath libs.androidx.navigation.safeargs
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.2.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22' apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.kotlin.serialization apply false
 }
 
 task clean(type: Delete) {
