--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
         classpath libs.androidx.navigation.safeargs
@@ -18,6 +19,8 @@ plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.kotlin.android apply false
     alias libs.plugins.kotlin.serialization apply false
+    alias libs.plugins.kotlin.compose apply false
+    alias libs.plugins.koltin.ksp apply false
 }
 
 task clean(type: Delete) {
