--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,12 @@ plugins {
 android {
     namespace = "com.solana.mwallet"
 
-    compileSdk 35
+    compileSdk = 36
 
     defaultConfig {
         applicationId "com.solana.mwallet"
         minSdk 23
-        targetSdk 35
+        targetSdk 36
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -82,9 +82,10 @@ android {
         buildConfig true
         compose true
     }
-
     packagingOptions {
-        exclude 'META-INF/versions/9/OSGI-INF/MANIFEST.MF'
+        resources {
+            excludes += ['META-INF/versions/9/OSGI-INF/MANIFEST.MF']
+        }
     }
 }
 
